--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,9 +1,9 @@
 <h1>Dice Roll</h1>
 
 <form action="/process_roll">
-  <label>Number of dice to roll?</label>
-  <input type="text" name="dice">
-  <label>How many sides per die?</label>
-  <input type="text" name="side">
+  <label for="dice">Number of dice to roll?</label>
+  <input id="dice" type="text" name="dice">
+  <label for="sides">How many sides per die?</label>
+  <input id="sides" type="text" name="sides">
   <button>Roll!</button>
 </form>
